# GLCD

./: .gitignore  CMakeLists.txt  build-v2.cmd  build.cmd  pico-env-v2.cmd  pico-env.cmd
.claude/agents/: build-analyzer.md  commenter.md
docs/: design_guide.md  memory.md  mkv31_migration.md
src/app/: main.c
src/freertos_config/: FreeRTOSConfig.h
src/hal/: hal_delay.h  hal_gpio.h  hal_pwm.h  hal_spi.h
src/lcd/: lcd.h  lcd_st75256.c  lcd_st75256_cmds.h
src/port/mkv31/: README.md
src/port/pico/: board_config.h  hal_delay_pico.c  hal_gpio_pico.c  hal_pwm_pico.c  hal_spi_pico.c
src/pwm/: buck_pwm.c  buck_pwm.h
src/tasks/: core1_entry.c  core1_entry.h  lcd_task.c  lcd_task.h  pwm_task.c  pwm_task.h
src/ui/: draw.c  draw.h  font5x7.c  font5x7.h  sim.c  sim.h  ui.c  ui.h
